fixed button alignment for favorite places section

--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ body {
 
 .card {
   background-color: white;
-  margin-top: 30px 0;
+  margin-top: auto;
 }
 
 .card-header.grid {
@@ -61,7 +61,8 @@ body {
 }
 
 .btn {
-  display: block;
+  display: flex;
+  flex-direction: column;
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
